// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskDetails renders correctly 1`] = `
Array [
  <header
    loading={true}
    navItems={false}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    data-testid="task-details-page"
  />,
]
`;

exports[`Component - TaskDetails renders correctly 2`] = `
Array [
  <header
    loading={false}
    navItems={false}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    data-testid="task-details-page"
  />,
]
`;
